--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -24,7 +24,7 @@
 			<ul>- Portfolio sites</ul>
 	</list>
 	<br>
-	<footer><a href="mailto:dbov93@gmail.com">Contact Us</a></footer>
+	<footer><a href="mailto:dbov93@gmail.com">Contact Us!</a></footer>
 </body>
 
 </html>
