--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -12,7 +12,7 @@
 	<hr>
 	<p id="desc">It was late in the autumn of 2015 when creative type, David Yakubov, encountered a website that was so inadequate it drove him mad.
 	<br>
-	He began research on how to provide clear and effective web solutions for the world. He saught to vanquish cumbersome designs once and for all. 
+	He began his research on how to provide clear and effective web solutions for the world. He saught to vanquish cumbersome designs once and for all. 
 	<br>
 	And so it was the winter of 2015 when Yak Media was conceived to help achieve his goal.</p>
 	<br>
