--- a/dyakubov/index.html
+++ b/dyakubov/index.html
@@ -4,7 +4,7 @@
 
 	<title>Yak Media</title>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 
 </head>
 <body background="http://i.imgur.com/0EZUHMm.jpg">
