--- a/dyakubov/contact.html
+++ b/dyakubov/contact.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 
 	<title>Contact</title>
 
